- 検索表示結果調整

--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -135,11 +135,11 @@ Aa-10
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                         </a>
                                     </td>
-                                    <td name="name|slice:20">$name$</td>
+                                    <td name="name|slice">$name$</td>
                                     <td name="headline|slice:10">$headline$</td>
                                     <td name="duration|duration:minute">$duration$</td>
-                                    <td name="contentRatingName">$contentRatingName$</td>
-                                    <td name="distributorName">$distributorName$</td>
+                                    <td name="contentRatingName|slice">$contentRatingName$</td>
+                                    <td name="distributorName|slice">$distributorName$</td>
                                     <td name="datePublished|date:YYYY-MM-DD HH:mm:ss">$datePublished$</td>
                                     <td name="offers.availabilityEnds|date:YYYY-MM-DD HH:mm:ss">
                                         $offers.availabilityEnds$
