--- a/views/offerCatalogs/_dataTables.ejs
+++ b/views/offerCatalogs/_dataTables.ejs
@@ -81,7 +81,7 @@
                                 </a>
                             </td>
                             <td name="itemOfferedName">$itemOfferedName$</td>
-                            <td name="serviceTypeName">
+                            <td name="serviceTypeName|slice">
                                 $serviceTypeName$</td>
                             <td name="id__additionalProperty">
                                 <a href="javascript:void(0)" class=" showAdditionalProperty" data-id="$id$">
