--- a/views/offers/_dataTables.ejs
+++ b/views/offers/_dataTables.ejs
@@ -159,7 +159,7 @@
                             <td name="priceStr">$priceStr$</td>
                             <td name="priceSpecification.accounting.accountsReceivable">
                                 $priceSpecification.accounting.accountsReceivable$</td>
-                            <td name="categoryName">$categoryName$</td>
+                            <td name="categoryName|slice">$categoryName$</td>
                             <td name="id__availableAtOrFromCount">
                                 <a href="javascript:void(0)" class="showAvailableAtOrFrom" data-id="$id$">
                                     表示
