--- a/views/priceSpecifications/index.ejs
+++ b/views/priceSpecifications/index.ejs
@@ -87,8 +87,8 @@ PS-02
                                     </td>
                                     <td name="name.ja|slice">$name.ja$</td>
                                     <td name="appliesToCategoryCodeName|slice">$appliesToCategoryCodeName$</td>
-                                    <td name="appliesToMovieTicketName">$appliesToMovieTicketName$</td>
-                                    <td name="appliesToVideoFormatName">$appliesToVideoFormatName$</td>
+                                    <td name="appliesToMovieTicketName|slice">$appliesToMovieTicketName$</td>
+                                    <td name="appliesToVideoFormatName|slice">$appliesToVideoFormatName$</td>
                                     <td name="price__priceCurrency">$price$ $priceCurrency$</td>
                                     <td name="id">
                                         <a target="_blank" href="/priceSpecifications/$id$/update">
