- 決済サービスにプロバイダー編集を追加

--- a/views/paymentServices/index.ejs
+++ b/views/paymentServices/index.ejs
@@ -57,6 +57,7 @@ PR-00
                                     <th>名称</th>
                                     <th>AvailableChannel</th>
                                     <th>ServiceOutput</th>
+                                    <th>プロバイダー</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -77,6 +78,11 @@ PR-00
                                     </td>
                                     <td name="id__serviceOutput">
                                         <a href="javascript:void(0)" class="showServiceOutput" data-id="$id$">
+                                            表示
+                                        </a>
+                                    </td>
+                                    <td name="id__provider">
+                                        <a href="javascript:void(0)" class="showProvider" data-id="$id$">
                                             表示
                                         </a>
                                     </td>
