--- a/views/paymentServices/form.ejs
+++ b/views/paymentServices/form.ejs
@@ -17,6 +17,11 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#link4provider" role="tablist">
+                    プロバイダー
+                </a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#link4" role="tablist">
                     高度な設定
                 </a>
@@ -90,7 +95,11 @@
                     </div>
                 </div>
             </div>
-            <div class="tab-pane" id="link2">
+
+            <div class="tab-pane" id="link4provider">
+                <%- include('./_provider', {
+                    providers: forms.provider
+                }) %>
             </div>
 
             <div class="tab-pane" id="link4">
