--- a/views/sellers/form.ejs
+++ b/views/sellers/form.ejs
@@ -113,6 +113,13 @@
                     <div class="form-group bmd-form-group col-md-12">
                         <label for="paymentAccepted[]" class="bmd-label-static">
                             対応決済方法
+                            <a href="#" data-toggle="tooltip"
+                                title="<p class=&quot;text-left mb-0&quot;>販売者の対応可能な決済方法を設定します。<br>決済方法区分は区分管理にて設定可能です。</p>"
+                                style="pointer-events: auto;">
+                                <span class="material-icons" style="font-size: 1.2em;">
+                                    help
+                                </span>
+                            </a>
                         </label>
 
                         <select class="form-control" name="paymentAccepted[]" id="paymentAccepted[]" multiple="multiple"
