- イベント作成時のルーム選択肢を動的に変更

--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -41,8 +41,7 @@
                                 <div class="form-group bmd-form-group col-md-3">
                                     <label class="bmd-label-static" for="screen">ルーム
                                         <span class="text-danger">＊</span></label>
-                                    <select class="form-control" name="screen">
-                                        <option value="">施設を選択してください</option>
+                                    <select class="form-control" name="screen" style="width: 100%;">
                                     </select>
                                 </div>
 
